attempt to fix background on about not showing up

--- a/css/_about.scss
+++ b/css/_about.scss
@@ -12,6 +12,7 @@
         ),
         url('../img/self.jpg') center top;
     background-size: cover;
+    background-attachment: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
